<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/eventTypeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/event_icon"
            android:padding="5dp"
            app:srcCompat="@drawable/event"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/eventTypeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="5dp"
            android:hint="@string/event_type_name"
            android:autofillHints="Event name"
            android:inputType=""
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateView"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            tools:text="Friday April 15, 2021" />

        <TextView
            android:id="@+id/atTextView"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atText" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            tools:text="12:00" />

        <TextView
            android:id="@+id/tillView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tillText" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            tools:text="1:00" />
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:autofillHints="Event Description"

        android:hint="@string/event_description"
        android:inputType=""
        android:textSize="15sp"
        tools:text="Enter Event description" />


</LinearLayout>





